--- a/app/build.gradle
+++ b/app/build.gradle
@@ -42,5 +42,8 @@ dependencies {
     def camerax_version = "1.0.0-alpha04"
     implementation "androidx.camera:camera-core:${camerax_version}"
     implementation "androidx.camera:camera-camera2:${camerax_version}"
+    implementation 'com.google.android.gms:play-services-vision:15.0.2'
+
+
 }
 apply plugin: 'com.google.gms.google-services'
