--- a/app/build.gradle
+++ b/app/build.gradle
@@ -44,6 +44,7 @@ dependencies {
     implementation "androidx.camera:camera-camera2:${camerax_version}"
     implementation 'com.google.android.gms:play-services-vision:15.0.2'
 
+    implementation 'com.google.android.material:material:1.0.0'
 
 }
 apply plugin: 'com.google.gms.google-services'
